@@ -1,4 +1,17 @@
 <includes>
+	<variable name="skinsettings.musicvis">
+		<value condition="Skin.HasSetting(OSDVisualisation.Enabled) + Skin.HasSetting(OSDVisualisation.ShowFanart) + Skin.HasSetting(ArtistSlideShow.Enabled)">$LOCALIZE[250] + $LOCALIZE[108]</value>
+		<value condition="Skin.HasSetting(OSDVisualisation.Enabled) + Skin.HasSetting(OSDVisualisation.ShowFanart) + !Skin.HasSetting(ArtistSlideShow.Enabled)">$LOCALIZE[250] + $LOCALIZE[20445]</value>
+		<value condition="Skin.HasSetting(OSDVisualisation.Enabled) + !Skin.HasSetting(OSDVisualisation.ShowFanart) + !Skin.HasSetting(ArtistSlideShow.Enabled)">$LOCALIZE[250]</value>
+		<value condition="!Skin.HasSetting(OSDVisualisation.Enabled) + !Skin.HasSetting(OSDVisualisation.ShowFanart) + !Skin.HasSetting(ArtistSlideShow.Enabled)">$LOCALIZE[20445]</value>
+		<value condition="!Skin.HasSetting(OSDVisualisation.Enabled) + Skin.HasSetting(ArtistSlideShow.Enabled)">$LOCALIZE[108]</value>
+		<value></value>
+	</variable>
+	<variable name="skinsettings.videoosd">
+		<value condition="!Skin.HasSetting(osd.wideinfo)">$LOCALIZE[42449]</value>
+		<value condition="Skin.HasSetting(osd.wideinfo) + Skin.HasSetting(osd.fullwidthinfo)">$LOCALIZE[42450]</value>
+		<value condition="Skin.HasSetting(osd.wideinfo) + !Skin.HasSetting(osd.fullwidthinfo)">$LOCALIZE[42451]</value>
+	</variable>
 	<variable name="LiveTVOpens">
 		<value condition="Skin.HasSetting(pvr.epgdefault)">$LOCALIZE[19222]</value>
 		<value>$LOCALIZE[19023]</value>
