@@ -152,8 +152,8 @@
                             <icon>special://skin/extras/icons/skin.png</icon>
                         </item>
                         <item id="36">
-                            <description>Guide menu Settings</description>
-                            <label>$LOCALIZE[41460]</label>
+                            <description>Quick Nav menu Settings</description>
+                            <label>$LOCALIZE[41441]</label>
                             <onclick>noop</onclick>
 							<icon>special://skin/extras/icons/tvcatchup.png</icon>
                         </item>
@@ -452,61 +452,55 @@
 						<onleft>30</onleft>
 						<include>SettingsCategoryGrouplistVars</include>
 						<visible>Container(30).HasFocus(34)</visible>
-						<control type="radiobutton" id="8001">
+						<control type="button" id="8001">
 							<width>1210</width>
-							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>Skin.HasSetting(OSDVisualisation.Enabled)</selected>
-							<onclick condition="Skin.HasSetting(OSDVisualisation.Enabled)">Skin.Reset(OSDVisualisation.ShowFanart)</onclick>
-							<onclick>Skin.ToggleSetting(OSDVisualisation.Enabled)</onclick>
-							<label>$LOCALIZE[41240]</label>
+							<include>SettingsCategoryDefaultButtonVars</include>
+							<label>$LOCALIZE[12006]</label>
+							<label2>$VAR[skinsettings.musicvis]</label2>
+							<onclick condition="Skin.HasSetting(OSDVisualisation.Enabled) + Skin.HasSetting(OSDVisualisation.ShowFanart) + Skin.HasSetting(ArtistSlideShow.Enabled)">Skin.Reset(ArtistSlideShow.Enabled)</onclick>
+							<onclick condition="Skin.HasSetting(OSDVisualisation.Enabled) + Skin.HasSetting(OSDVisualisation.ShowFanart) + !Skin.HasSetting(ArtistSlideShow.Enabled)">Skin.Reset(OSDVisualisation.ShowFanart)</onclick>
+							<onclick condition="Skin.HasSetting(OSDVisualisation.Enabled) + !Skin.HasSetting(OSDVisualisation.ShowFanart) + !Skin.HasSetting(ArtistSlideShow.Enabled)">Skin.Reset(OSDVisualisation.Enabled)</onclick>
+							<onclick condition="Skin.HasSetting(OSDVisualisation.Enabled) + !Skin.HasSetting(OSDVisualisation.ShowFanart) + Skin.HasSetting(ArtistSlideShow.Enabled)">Skin.SetBool(OSDVisualisation.ShowFanart)</onclick>
+							<onclick condition="!Skin.HasSetting(OSDVisualisation.Enabled) + !Skin.HasSetting(OSDVisualisation.ShowFanart) + !Skin.HasSetting(ArtistSlideShow.Enabled)">Skin.SetBool(ArtistSlideShow.Enabled)</onclick>
+							<onclick condition="!Skin.HasSetting(OSDVisualisation.Enabled) + Skin.HasSetting(OSDVisualisation.ShowFanart) + !Skin.HasSetting(ArtistSlideShow.Enabled)">Skin.Reset(OSDVisualisation.ShowFanart)</onclick>
+							<onclick condition="!Skin.HasSetting(OSDVisualisation.Enabled) + !Skin.HasSetting(OSDVisualisation.ShowFanart) + Skin.HasSetting(ArtistSlideShow.Enabled)">Skin.SetBool(OSDVisualisation.Enabled)</onclick>
+							<onclick condition="!Skin.HasSetting(OSDVisualisation.Enabled) + !Skin.HasSetting(OSDVisualisation.ShowFanart) + Skin.HasSetting(ArtistSlideShow.Enabled)">Skin.SetBool(OSDVisualisation.ShowFanart)</onclick>
 						</control>
 						<control type="radiobutton" id="8002">
-							<width>1210</width>
-							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>Skin.HasSetting(OSDVisualisation.ShowFanart)</selected>
-							<onclick>Skin.ToggleSetting(OSDVisualisation.ShowFanart)</onclick>
-							<visible>Skin.HasSetting(OSDVisualisation.Enabled)</visible>
-							<label> - $LOCALIZE[41106]</label>
-						</control>
-						<control type="radiobutton" id="8003">
-							<width>1210</width>
-							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>Skin.HasSetting(ArtistSlideShow.Enabled)</selected>
-							<onclick>Skin.ToggleSetting(ArtistSlideShow.Enabled)</onclick>
-							<enable>System.HasAddon(script.artistslideshow)</enable>
-							<label>$LOCALIZE[41103]</label>
-							<animation effect="fade" start="100" end="42" time="0" condition="!Control.IsEnabled(8002)">Conditional</animation>
-						</control>
-						<control type="radiobutton" id="8004">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
 							<selected>Skin.HasSetting(ArtistSlideShow.Animate)</selected>
 							<onclick>Skin.ToggleSetting(ArtistSlideShow.Animate)</onclick>
 							<label> - $LOCALIZE[41105]</label>
+							<enable>Skin.HasSetting(ArtistSlideShow.Enabled)</enable>
+							<animation effect="fade" start="100" end="42" time="0" condition="!Control.IsEnabled(8002)">Conditional</animation>
+							<visible>Control.IsEnabled(8002)</visible>
 						</control>
-						
-						<control type="radiobutton" id="8008">
-							<width>1210</width>
-							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>Skin.HasSetting(musicvis.small)</selected>
-							<onclick>Skin.ToggleSetting(musicvis.small)</onclick>
-							<label>42417</label>
-						</control>
-						<control type="radiobutton" id="8010">
+						<control type="radiobutton" id="8003">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
 							<selected>!Skin.HasSetting(musicvis.hidetext)</selected>
 							<onclick>Skin.ToggleSetting(musicvis.hidetext)</onclick>
 							<label> - $LOCALIZE[42418]</label>
 						</control>
-						<control type="radiobutton" id="8009">
+						<control type="radiobutton" id="8004">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>!Skin.HasSetting(osd.wideinfo)</selected>
-							<onclick>Skin.ToggleSetting(osd.wideinfo)</onclick>
-							<label>42441</label>
+							<selected>Skin.HasSetting(musicvis.small)</selected>
+							<onclick>Skin.ToggleSetting(musicvis.small)</onclick>
+							<label> - $LOCALIZE[42417]</label>
 						</control>
-						<control type="radiobutton" id="8013">
+						<control type="button" id="8005">
+							<width>1210</width>
+							<include>SettingsCategoryDefaultButtonVars</include>
+							<label>$LOCALIZE[20159]</label>
+							<label2>$VAR[skinsettings.videoosd]</label2>
+							<onclick condition="!Skin.HasSetting(osd.wideinfo)">Skin.SetBool(osd.fullwidthinfo)</onclick>
+							<onclick condition="!Skin.HasSetting(osd.wideinfo)">Skin.SetBool(osd.wideinfo)</onclick>
+							<onclick condition="Skin.HasSetting(osd.wideinfo) + Skin.HasSetting(osd.fullwidthinfo)">Skin.Reset(osd.fullwidthinfo)</onclick>
+							<onclick condition="Skin.HasSetting(osd.wideinfo) + !Skin.HasSetting(osd.fullwidthinfo)">Skin.Reset(osd.wideinfo)</onclick>
+						</control>
+						<control type="radiobutton" id="8006">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
 							<selected>Skin.HasSetting(videoosd.hideposterinfo)</selected>
@@ -514,22 +508,14 @@
 							<label> - $LOCALIZE[42442]</label>
 							<visible>Skin.HasSetting(osd.wideinfo)</visible>
 						</control>
-						<control type="radiobutton" id="8014">
-							<width>1210</width>
-							<include>SettingsCategoryRadioButtonVars</include>
-							<selected>!Skin.HasSetting(osd.fullwidthinfo)</selected>
-							<onclick>Skin.ToggleSetting(osd.fullwidthinfo)</onclick>
-							<label> - $LOCALIZE[42447]</label>
-							<visible>Skin.HasSetting(osd.wideinfo)</visible>
-						</control>
-						<control type="radiobutton" id="8011">
+						<control type="radiobutton" id="8007">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
 							<selected>Skin.HasSetting(videoosd.clearlogo)</selected>
 							<onclick>Skin.ToggleSetting(videoosd.clearlogo)</onclick>
 							<label> - $LOCALIZE[42428]</label>
 						</control>
-						<control type="radiobutton" id="8012">
+						<control type="radiobutton" id="8008">
 							<width>1210</width>
 							<include>SettingsCategoryRadioButtonVars</include>
 							<selected>Skin.HasSetting(osd.darkpanel)</selected>
