@@ -8,6 +8,7 @@ Fixed Dark theme volume on simple wrong colour
 Thumbnail view available for all views
 Poster on wider osd made smaller
 Changed aspect for thumbs on osd
+OSD Settings Clean-up
 
 [B]0.3.7[/B]
 Added infotags to OSD
